- added Fighting Styles sprites
- fixed Bow Mastery allowing extra attack if first one was melee and hero switches to a shortbow
- fixed Cleaving Attack allowing extra attack if first one was melee and hero switches to ranged