@@ -5,6 +5,8 @@
 - added Fighting Styles sprites
 - fixed Bow Mastery allowing extra attack if first one was melee and hero switches to a shortbow
 - fixed Cleaving Attack allowing extra attack if first one was melee and hero switches to ranged
+- fixed Martial Marshal's encouragement granting the condition to allies outside the effect area
+- removed Gnome and Tiefling races from mod UI offering keeping backward compatibility until May
 
 1.4.33.57:
 
